force-app/main/default/objects/Investigation_Findings__c/Investigation_Findings__c.object-meta.xml
<CustomObject>
    <label>Investigation Findings</label>
    <nameField>
        <displayFormat>IF-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investigation Findings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>