force-app/main/default/objects/Investigation_Findings__c/fields/A_Physical_injury__c.field-meta.xml
<CustomField>
    <fullName>A_Physical_injury__c</fullName>
    <inlineHelpText>A Physical injury (briefly describe the current or prior injury)</inlineHelpText>
    <label>A Physical injury(briefly)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>