force-app/main/default/objects/Investigation_Findings__c/fields/Abuse_Types__c.field-meta.xml
<CustomField>
    <fullName>Abuse_Types__c</fullName>
    <label>Abuse Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PHYSICAL ABUSE</fullName>
            </value>
            <value>
                <fullName>SEXUAL ABUSE</fullName>
            </value>
            <value>
                <fullName>NEGLECT</fullName>
            </value>
            <value>
                <fullName>FAILURE TO PROTECT</fullName>
            </value>
            <value>
                <fullName>ABANDONMENT</fullName>
            </value>
            <value>
                <fullName>UNATTENDED CHILD</fullName>
            </value>
            <value>
                <fullName>MEDICAL NEGLECT</fullName>
            </value>
            <value>
                <fullName>MENTAL INJURY - ABUSE</fullName>
            </value>
            <value>
                <fullName>MENTAL INJURY - NEGLECT</fullName>
            </value>
            <value>
                <fullName>RISK OF HARM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>