force-app/main/default/objects/Investigation_Findings__c/fields/accordionLabel__c.field-meta.xml
<CustomField>
    <fullName>accordionLabel__c</fullName>
    <formula>&apos;VICTIM NAME: &apos;+  Contact__r.FirstName +&apos; &apos;+ Contact__r.LastName +&apos; | MALTREATMENT TYPE: &apos;+  TEXT(Abuse_Types__c)+ &apos; | ALLEGED MALTREATOR: &apos;+  Alleged_Maltreators__r.FirstName+&apos; &apos;+Alleged_Maltreators__r.LastName</formula>
    <label>accordionLabel</label>
    <type>Text</type>
</CustomField>