force-app/main/default/objects/Investigation_Findings__c/fields/Alleged_Maltreator_s_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Alleged_Maltreator_s_Explanation__c</fullName>
    <inlineHelpText>Alleged Maltreator&apos;s Explanation: {account of what occurred}</inlineHelpText>
    <label>Alleged Maltreator&apos;s Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>