force-app/main/default/objects/Investigation_Findings__c/fields/Alleged_Maltreators__c.field-meta.xml
<CustomField>
    <fullName>Alleged_Maltreators__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alleged Maltreators</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Investigation Findings (Alleged Maltreators)</relationshipLabel>
    <relationshipName>Investigation_Findings1</relationshipName>
    <type>Lookup</type>
</CustomField>