force-app/main/default/objects/Investigation_Findings__c/fields/Alleged_Victim_s_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Alleged_Victim_s_Explanation__c</fullName>
    <inlineHelpText>Alleged Victim(s) Explanation: {account of what occurred}</inlineHelpText>
    <label>Alleged Victim(s) Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>