force-app/main/default/objects/Investigation_Findings__c/fields/Circumstances_including_the_nature__c.field-meta.xml
<CustomField>
    <fullName>Circumstances_including_the_nature__c</fullName>
    <inlineHelpText>Circumstances including the nature, extent, and location of the inquiry indicate that there was (describe either OR both using a bulleted format or short narrative)</inlineHelpText>
    <label>Circumstances including the nature</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>