force-app/main/default/objects/Investigation_Findings__c/fields/Collateral_Interviews_CPS_Interview__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Interviews_CPS_Interview__c</fullName>
    <inlineHelpText>Collateral Interviews(CPS Interview )</inlineHelpText>
    <label>Collateral Interviews(CPS Interview)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>