force-app/main/default/objects/Investigation_Findings__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alleged Victim</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Investigation Findings</relationshipLabel>
    <relationshipName>Investigation_Findings</relationshipName>
    <type>Lookup</type>
</CustomField>