force-app/main/default/objects/Investigation_Findings__c/fields/Contributing_factor_in_the_family__c.field-meta.xml
<CustomField>
    <fullName>Contributing_factor_in_the_family__c</fullName>
    <label>Contributing factor in the family?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>