force-app/main/default/objects/Investigation_Findings__c/fields/During_the_incident__c.field-meta.xml
<CustomField>
    <fullName>During_the_incident__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>During the incident, a substantial risk of harm to a child</inlineHelpText>
    <label>During the incident, a substantial risk</label>
    <type>Checkbox</type>
</CustomField>