force-app/main/default/objects/Investigation_Findings__c/fields/Findings__c.field-meta.xml
<CustomField>
    <fullName>Findings__c</fullName>
    <label>Findings</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indicated</fullName>
            </value>
            <value>
                <fullName>Ruled out</fullName>
            </value>
            <value>
                <fullName>Unsubstantiated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>