force-app/main/default/objects/Investigation_Findings__c/fields/Harm_to_a_child__c.field-meta.xml
<CustomField>
    <fullName>Harm_to_a_child__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Harm to a child</label>
    <type>Checkbox</type>
</CustomField>