force-app/main/default/objects/Investigation_Findings__c/fields/Indicated_sexual_molestation__c.field-meta.xml
<CustomField>
    <fullName>Indicated_sexual_molestation__c</fullName>
    <inlineHelpText>An act that involves sexual molestation or sexual exploitation (describe in detail)</inlineHelpText>
    <label>sexual molestation/sexual exploitation</label>
    <type>TextArea</type>
</CustomField>