force-app/main/default/objects/Investigation_Findings__c/fields/Indicated_The_act_involving_sexual__c.field-meta.xml
<CustomField>
    <fullName>Indicated_The_act_involving_sexual__c</fullName>
    <inlineHelpText>The act involving sexual molestation or exploitation was by a parent, caregiver, authority figure, or by a household or family member (insert name and whether the person is a parent, OR caregiver OR authority figure, OR household, OR family member)</inlineHelpText>
    <label>The act involving sexual molestation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>