force-app/main/default/objects/Investigation_Findings__c/fields/Investigation__c.field-meta.xml
<CustomField>
    <fullName>Investigation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investigation</label>
    <referenceTo>Investigation__c</referenceTo>
    <relationshipLabel>Investigation Findings</relationshipLabel>
    <relationshipName>Investigation_Findings</relationshipName>
    <type>Lookup</type>
</CustomField>