force-app/main/default/objects/Investigation_Findings__c/fields/Maltreatment_Type__c.field-meta.xml
<CustomField>
    <fullName>Maltreatment_Type__c</fullName>
    <label>Maltreatment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>