force-app/main/default/objects/Investigation_Findings__c/fields/Parent_Legal_Guardian_s_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Parent_Legal_Guardian_s_Explanation__c</fullName>
    <inlineHelpText>Parent/Legal Guardian(s) Explanation: {account of what occured}</inlineHelpText>
    <label>Parent/Legal Guardian(s) Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>