force-app/main/default/objects/Investigation_Findings__c/fields/Physician_or_other_medical_Assessment_s__c.field-meta.xml
<CustomField>
    <fullName>Physician_or_other_medical_Assessment_s__c</fullName>
    <inlineHelpText>Physician or other medical Assessment(s): (attach records if available in document tab)(account of what occurred)</inlineHelpText>
    <label>Physician or other medical Assessment(s)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>