force-app/main/default/objects/Investigation_Findings__c/fields/Relationship_to_Maltreator__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Maltreator__c</fullName>
    <label>Relationship to Maltreator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>