force-app/main/default/objects/Investigation_Findings__c/fields/Relevant_Criminal_History__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Criminal_History__c</fullName>
    <inlineHelpText>Relevant Criminal History (of any involved persons)</inlineHelpText>
    <label>Relevant Criminal History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>