force-app/main/default/objects/Investigation_Findings__c/fields/Ruled_Out_Sexual_Molestation__c.field-meta.xml
<CustomField>
    <fullName>Ruled_Out_Sexual_Molestation__c</fullName>
    <inlineHelpText>An act that involves sexual molestation or sexual exploitation (describe in detail)</inlineHelpText>
    <label>Sexual Molestationor Sexual Exploitation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>