force-app/main/default/objects/Investigation_Findings__c/fields/Sibling_s_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Sibling_s_Explanation__c</fullName>
    <inlineHelpText>Sibling(s) Explanation: {account of what occurred}</inlineHelpText>
    <label>Sibling(s) Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>