force-app/main/default/objects/Investigation_Findings__c/fields/The_injury_was_caused__c.field-meta.xml
<CustomField>
    <fullName>The_injury_was_caused__c</fullName>
    <inlineHelpText>The injury was caused by a parent, Caregiver, authority figure, or household, or family member (insert name and whether the person is a parent, OR Caregiver, OR authority figure, OR household, OR family member)</inlineHelpText>
    <label>The injury was caused by a parent</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>