force-app/main/default/objects/Investigation_Findings__c/fields/The_injury_was_not_caused_by_accidental__c.field-meta.xml
<CustomField>
    <fullName>The_injury_was_not_caused_by_accidental__c</fullName>
    <inlineHelpText>The injury was not caused by accidental means (provide details supporting either
an intentional act or reckless disregard for the child&apos;s health or welfare causing the</inlineHelpText>
    <label>The injury was not caused by accidental</label>
    <type>TextArea</type>
</CustomField>