force-app/main/default/objects/Investigation_Findings__c/fields/Unsubstantiated_The_victim_was_a_child__c.field-meta.xml
<CustomField>
    <fullName>Unsubstantiated_The_victim_was_a_child__c</fullName>
    <inlineHelpText>The victim was a child(child&apos;s DOB)</inlineHelpText>
    <label>The victim was a child(child&apos;s DOB)</label>
    <type>Date</type>
</CustomField>