force-app/main/default/objects/Investigation_Findings__c/fields/Victim_Name__c.field-meta.xml
<CustomField>
    <fullName>Victim_Name__c</fullName>
    <label>Victim Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>